<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/manual_welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/manual_welcome_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/manual_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/manual_welcome_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/manual_how_to_play_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/manual_how_to_play_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/manual_how_to_play_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/manual_how_to_play_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/manual_scoring_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/manual_scoring_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/manual_scoring_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/manual_scoring_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_manual_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/manual_footer"
            android:textSize="14sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/backButton"
            style="@style/AppButton"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:text="@string/help_button_back"
            android:textSize="24sp"
            android:onClick="navigateToMainActivity"/>
    </LinearLayout>
</ScrollView>
